address component created

--- a/src/assets/sass/light-bootstrap-dashboard.scss
+++ b/src/assets/sass/light-bootstrap-dashboard.scss
@@ -36,6 +36,7 @@
 @import "lbd/responsive";
 
 @import "~vue-wysiwyg/dist/vueWysiwyg.css";
+@import "~vue-multiselect/dist/vue-multiselect.min.css";
 
 
 
