--- a/src/assets/sass/light-bootstrap-dashboard.scss
+++ b/src/assets/sass/light-bootstrap-dashboard.scss
@@ -30,7 +30,7 @@
 // Fancy Stuff
 @import "lbd/plugins/animate";
 @import "lbd/dropdown";
-@import "lbd/cards";
+//@import "lbd/cards";
 @import "lbd/chartist";
 @import "lbd/tooltip";
 @import "lbd/responsive";
@@ -38,5 +38,5 @@
 @import "~vue-wysiwyg/dist/vueWysiwyg.css";
 @import "~vue-multiselect/dist/vue-multiselect.min.css";
 
-
-
+@import '~bootstrap/dist/css/bootstrap.css';
+@import '~bootstrap-vue/dist/bootstrap-vue.css';
