--- a/src/assets/sass/lbd/_checkbox-radio-switch.scss
+++ b/src/assets/sass/lbd/_checkbox-radio-switch.scss
@@ -16,7 +16,7 @@
 
     .form-check-sign::before,
     .form-check-sign::after{
-        font-family: 'FontAwesome';
+        font-family: 'Font Awesome 5 Free';
         content: "\f096";
         display: inline-block;
         color: $info-color;
@@ -34,7 +34,7 @@
         transition: opacity 0.3s linear;
     }
     .form-check-sign::after{
-        font-family: 'FontAwesome';
+        font-family: 'Font Awesome 5 Free';
         content: "\f046";
         text-align: center;
         opacity: 0;
@@ -91,8 +91,8 @@
 }
 
 .form-check-radio .form-check-sign::before{
-    font-family: 'FontAwesome';
-    content: "\f10c";
+    font-family: 'Font Awesome 5 Free';
+    content: "\f111";
     font-size: 22px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -120,7 +120,7 @@
 }
 
 .form-check-radio input[type="radio"]:checked + .form-check-sign::after {
-    font-family: 'FontAwesome';
+    font-family: 'Font Awesome 5 Free';
     content: "\f192";
     top: -5px;
     position: absolute;
