--- a/src/assets/sass/lbd/_navbars.scss
+++ b/src/assets/sass/lbd/_navbars.scss
@@ -70,7 +70,7 @@
                 color: $default-color;
                 padding: $navbar-padding-a;
                 position: relative;
-                display: inline-flex;
+                /*display: inline-flex;*/
                 line-height: 1.2;
 
                 &.btn{
